--- a/application/modules/admin/views/scripts/receipt/purchase-order.phtml
+++ b/application/modules/admin/views/scripts/receipt/purchase-order.phtml
@@ -154,7 +154,7 @@ $adminInfoSession = new Zend_Session_Namespace('adminInfo');
 								</div>
 
 								<div class="col-xs-2 rate text-left">
-									<input type="number" name="rate" required="true" readonly="readonly" min="1" class="form-control unit_price" style="width: 60%; float: left;" placeholder="50">
+									<input type="number" name="rate" required="true" min="1" class="form-control unit_price" style="width: 60%; float: left;" placeholder="50">
                                     <span class="unit_rate" style="line-height:2"></span>
 								</div>
 								<div class="col-xs-3 rate text-right">
