--- a/application/modules/admin/views/scripts/receipt/create-challan.phtml
+++ b/application/modules/admin/views/scripts/receipt/create-challan.phtml
@@ -59,7 +59,8 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 
 								  <div class="form-group">
                                             <label>Vat Challan No.</label>
-                                            <strong><input class="form-control" readonly="readonly" value="<?php echo $this->challanNo?>"></strong>
+                                            <strong>
+												<input class="form-control"  name="challan_no" required="required" value="<?php echo $this->challanNo?>"></strong>
                                         </div>
 							</div>
 							<div class="col-sm-6 text-right">
@@ -164,7 +165,7 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 								<div class="col-xs-3">Description</div>
 								<div class="col-xs-3">Packing</div>
 								<div class="col-xs-3">Rate</div>
-								<div class="col-xs-2 text-right" title="This is a remaning quantity which has to be provided">Required Quantity</div>
+								<div class="col-xs-2 text-right" title="This is a remaning quantity which has to be provided">Remaining Quantity</div>
 							</div>
 						</div>
 						<div class="items">
@@ -193,7 +194,7 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 
 						<div class="col-xs-3 pack">
 							<div class="form-group">
-								<input type="number" class="form-control productRate" readonly="readonly" style="width: 60%; float: left;" required="true" value="<?php echo $this->purchaseOrder['rate']  ?>">
+								<input type="number" class="form-control productRate" name="rate"  style="width: 60%; float: left;" required="true" value="<?php echo $this->purchaseOrder['rate']  ?>">
 								<span class="unit_rate" style="line-height:2"> /<?php echo $this->purchaseOrder['unit']  ?></span>
 
 						  </div>
@@ -223,34 +224,34 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 							</p>
 
 							<div class="field">
-								Subtotal <span> <input type="number" class="sub_total" readonly="readonly" name="sub_total"></span>
+								Subtotal <span> <input type="text" class="sub_total" required="required"  name="sub_total"></span>
 							</div>
 							<div class="field">
 								VAT <?php echo  ($this->vat > 0) ? "(".$this->vat."%)" : ""?>
 								<span>
-									<input type="number" readonly="readonly" class="vat" value="0" vat="<?php echo $this->vat?>" name="vat">
+									<input type="text" class="vat" value="0" vat="<?php echo $this->vat?>" name="vat">
 								</span>
 							</div>
 							<div class="field">
 								Shipping
 								<span>
-									<input type="number" value="0" class="shipping" readonly="readonly" shipping="<?php echo $this->shipping?>" name="shipping">
+									<input type="text" value="0" class="shipping"  shipping="<?php echo $this->shipping?>" name="shipping">
 								</span>
 							</div>
 							<div class="field">
 								Discount <?php echo  ($this->discount > 0) ? "(".$this->discount."%)" : ""?>
 								<span>
-									<input type="number" value="0" class="discount" readonly="readonly" discount="<?php echo $this->discount?>" name="discount">
+									<input type="text" value="0" class="discount"  discount="<?php echo $this->discount?>" name="discount">
 								</span>
 							</div>
 							<div class="field ">
-								Total <span> <input type="number"  class="total" readonly="readonly" required="true" name="total"></span>
+								Total <span> <input type="text"  class="total" required="required" required="true" name="total"></span>
 							</div>
 
 
 						</div>
 
-						<div class="total text-left">
+						<!--<div class="total text-left">
 							<div class="col-md-12">
 								<p class="AmountInWords" style="display: none">
 									<strong>Amount In words</strong>
@@ -258,7 +259,7 @@ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 								</p>
 								<input type="hidden"  class="totalInWords" readonly="readonly"  name="totalInWords">
 							</div>
-						</div>
+						</div>-->
 
 
 					</div>
