--- a/application/modules/admin/views/scripts/receipt/print-challan.phtml
+++ b/application/modules/admin/views/scripts/receipt/print-challan.phtml
@@ -1,5 +1,7 @@
 <?php
- $challan  =  $this->challan[0];
+ $challan  				=  		$this->challan[0];
+ $remaning_quentity		= 		(int)($challan['ordered_quentity'] - $challan['given_quentity']);
+ $remaning_quentity		=		($remaning_quentity > 0 ) ? $remaning_quentity : 0 ;
 ?>
         <div id="page-wrapper">
             <div class="row">
@@ -57,7 +59,7 @@
 
 								  <div class="form-group">
                                             <label>Vat Challan No.</label>
-                                            <strong><input class="form-control" readonly="readonly" value="<?php echo $challan['id']?>"></strong>
+                                            <strong><input class="form-control" readonly="readonly" value="<?php echo (!empty($challan['challan_no'])) ? $challan['challan_no'] : $challan['id'];?>"></strong>
                                         </div>
 							</div>
 							<div class="col-sm-6 text-right">
@@ -147,7 +149,7 @@
 								<div class="col-xs-3">Description</div>
 								<div class="col-xs-3">Packing</div>
 								<div class="col-xs-3">Rate</div>
-								<div class="col-xs-2 text-right">Required Quantity</div>
+								<div class="col-xs-2 text-right">Remaining Quantity</div>
 							</div>
 						</div>
 						<div class="items">
@@ -181,7 +183,7 @@
 
 								<div class="col-xs-2 pack">
 									<div class="form-group">
-                             <input type="text" class="form-control" readonly="readonly" value="<?php echo ($challan['given_quentity']-$challan['quantity']).' ' .$challan['unit']  ?>">
+                             <input type="text" class="form-control" readonly="readonly" value="<?php echo ($remaning_quentity).' ' .$challan['unit']  ?>">
 							  </div>
 								</div>
 
@@ -231,7 +233,7 @@
 						<div class="total text-left">
 							<div class="col-md-12">
 								<p >
-									<strong>Amount In words:</strong> <?php echo $challan['totalInWords']?>
+									<strong>Amount In words:</strong> <?php echo  amountInWords($challan['total']); ?>
 								</p>
 							</div>
 						</div>
